# anipler

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  mise.toml
.github/workflows/: ci.yaml  nightly.yaml  nix.yaml  rust.yaml
docs/: example-config.toml
nix/: nixos.nix  package.nix
src/: api.rs  bot.rs  config.rs  daemon.rs  error.rs  lib.rs  model.rs  puller.rs  qbit.rs  rsync.rs  storage.rs  task.rs
