[package]
name = "anipler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
derive_builder = "0.20.2"
qbit-rs = "0.4.7"
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"sqlite",
	"tls-native-tls",
] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
	"sync",
] }
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
uuid = "1.19.0"

[[bin]]
name = "anipler-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "anipler-pull"
path = "src/bin/pull.rs"
