[package]
name = "anipler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anipler-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "anipler-puller"
path = "src/bin/puller.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20"
dirs = "6.0"
frankenstein = { version = "0.47", features = ["client-reqwest"] }
qbit-rs = "0.4"
reqwest = { version = "0.13", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
shell-words = "1.1"
shellexpand = "3.1"
sqlx = { version = "0.8", features = [
  "macros",
  "runtime-tokio",
  "sqlite-unbundled",
  "tls-native-tls",
] }
tap = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "process",
] }
tokio-cron-scheduler = { version = "0.15", features = ["signal"] }
tokio-util = "0.7"
toml = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = "1.20"
